--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>Advait Gadhikar</title>
+  <title>Mohor Banerjee</title>
   
   <!-- This is the Google Site verification tag you wanted to keep -->
   <meta name="google-site-verification" content="nE15D4IQuhpbq911DjoG8NvWvkLi6euDJixacyOZVtE" />
   
-  <meta name="author" content="Advait Gadhikar">
+  <meta name="author" content="Mohor Banerjee">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="images/seal_icon.png">
 
-  <!-- Google Fonts for an elegant, academic feel -->
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -251,21 +251,21 @@
   <div class="container">
     <header class="header">
       <div class="header-text">
-        <p class="name">Advait Gadhikar</p>
+        <p class="name">Mohor Banerjee</p>
         <div class="links">
-          <a href="mailto:advait.gadhikar@cispa.de">
+          <a href="mailto:MOHOR001@e.ntu.edu.sg">
             <svg viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2zm0 2v.51l8 5 8-5V6H4zm0 10h16v-9.3l-8 5-8-5V16z"/></svg>
             Email
           </a>
-          <a href="https://docs.google.com/document/d/1LZImtrtO61S3NbdRR1NJILOU9vVVUy9l0H4n126_KV4/edit?usp=sharing" target="_blank">
+          <a href="https://github.com/mohrsalt" target="_blank">
             <svg viewBox="0 0 24 24"><path d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zm-2 16h-2v-2h2v2zm-2-4h-2v-2h2v2zm0-4H8V8h2v2zm4 4h-2v-2h2v2zm0-4h-2v-2h2v2zm2 4h-2v-2h2v2zm-1-7V3.5L18.5 9H13z"/></svg>
             CV
           </a>
-          <a href="https://www.linkedin.com/in/advaitgadhikar/" target="_blank">
+          <a href="www.linkedin.com/in/mohor-banerjee-5289a3244" target="_blank">
             <svg viewBox="0 0 24 24"><path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14zm-11 6v7h2.5v-3.5a1.5 1.5 0 0 1 3 0V16h2.5v-4a4 4 0 0 0-8 0zM8.5 8.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/></svg>
             LinkedIn
           </a>
-          <a href="https://github.com/AdvaitGadhikar" target="_blank">
+          <a href="https://github.com/mohrsalt" target="_blank">
             <svg viewBox="0 0 24 24"><path d="M12 2C6.475 2 2 6.475 2 12a9.994 9.994 0 0 0 6.838 9.5c.5.088.687-.213.687-.475 0-.23-.012-1.025-.012-1.862-2.513.462-3.038-1.087-3.038-1.087-.45-1.137-1.1-1.437-1.1-1.437-.9-.612.063-.6.063-.6 1 .075 1.525 1.025 1.525 1.025.887 1.512 2.312 1.075 2.875.825.088-.65.35-1.075.638-1.325-2.2-.25-4.512-1.1-4.512-4.9 0-1.075.387-1.95 1.025-2.637-.1-.25-.45-1.25.1-2.6 0 0 .837-.262 2.75 1.025a9.58 9.58 0 0 1 5 0c1.912-1.3 2.75-1.025 2.75-1.025.55 1.35.2 2.35.1 2.6.637.688 1.025 1.562 1.025 2.637 0 3.812-2.312 4.65-4.525 4.9.362.312.675.912.675 1.85 0 1.337-.012 2.412-.012 2.737 0 .262.188.562.688.475A10.001 10.001 0 0 0 22 12C22 6.475 17.525 2 12 2Z"/></svg>
             GitHub
           </a>
@@ -277,34 +277,25 @@
     </header>
 
     <main>
-      <section>
-        <h2>About Me</h2>
-        <p>
-          I am a final-year PhD student at the <strong>CISPA Helmholtz Center for Information Security</strong> in Saarbrücken, advised by <a href="https://sites.google.com/view/rebekkaburkholz/">Dr. Rebekka Burkholz</a>. My research focuses on building provable algorithms for deep learning, with a current interest in sparsity and the Lottery Ticket Hypothesis to understand the underlying structure of learned neural networks.
-        </p> 
-        <p>
-          I completed my Master's from the <a href="https://www.ece.cmu.edu/">ECE Department</a> at <strong>Carnegie Mellon University</strong>, where I worked with the Optimization, Probability and Learning Group (OPAL) advised by <a href="https://www.andrew.cmu.edu/user/gaurij/">Prof. Gauri Joshi</a> on optimization algorithms with theoretical guarantees for large-scale machine learning systems.
-        </p>
-        <p>
-          Prior to CMU, I was an undergraduate at <a href="https://www.bits-pilani.ac.in/Goa/">BITS Pilani</a>, India. For my bachelor's thesis, I had the privilege of working with <a href="https://ece.iisc.ac.in/~rajivs/#/">Prof. Rajiv Soundararajan</a> at the <strong>Indian Institute of Science</strong> on designing Image Quality Assessment models that perceive images similarly to the Human Visual System.
-        </p>
-        <p>Feel free to get in touch—I am always looking forward to insightful discussions!</p>
-      </section>
+     <section>
+  <h2>About Me</h2>
+  <p>
+    I am a final-year Computer Science undergraduate at <a href="https://www.ntu.edu.sg/"><strong>Nanyang Technological University (NTU), Singapore</strong></a>. My research lies at the intersection of language models, acoustic AI, medical imaging, and control systems, with a focus on building AI systems that are both <em>dependable</em> and <em>imaginative</em>. Currently, at NTU, I am thankful to be supervised by <a href="https://aseschng.github.io/intro1.html">Dr. Chng Eng Siong</a> and <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> for my final-year project on avian acoustic monitoring. I am also grateful to be working in <a href="https://dr.ntu.edu.sg/entities/person/Alvin-Chan-Guo-Wei">Dr. Alvin Guo Wei Chan’s lab</a>, where I explore language model hallucinations and creativity.
+  </p> 
+  <p>
+    In <strong>acoustic AI</strong>, I was fortunate to be advised by <a href="https://research.sg.panasonic.com/people/nagisetty-srikanth/"><strong>Srikanth Nagisetty</strong></a> during my internship at <a href="https://research.sg.panasonic.com/"><strong>Panasonic R&D Singapore</strong></a>. During this internship, I developed <em>ReCoOP</em>, a stereo SELD framework that combined ResNet-Conformers with ONE-PEACE embeddings. The system outperformed the baseline by 17.8% in F-score, placed 3rd globally in the IEEE AASP DCASE 2025 Challenge, and was accepted at the 10th DCASE Workshop. Additionally, I also built a dysarthric speech detection pipeline using Wav2Vec2 with CNN-Attention, deployed as a real-time Streamlit app. In my Final Year Project, I am extending these ideas to ecology by building a low-latency pipeline on the BirdSet dataset for bird vocalization detection, diarization, and classification, working within a 7-member team and targeting edge deployment.
+  </p>
+  <p>
+    In <strong>medical imaging</strong>, I was selected as one of 57 students worldwide for the <a href="https://mbzuai.ac.ae/ugrip/"><strong>MBZUAI UGRIP 2025 program</strong></a>, where I was grateful to work under <a href="https://mbzuai.ac.ae/study/faculty/dr-mohammad-yaqub/">Dr. Mohammad Yaqub</a>, <a href="https://hu-wang.github.io/">Dr. Hu Wang</a>, and <a href="https://scholar.google.com/citations?user=0L3EY0wAAAAJ">Dr. Mostafa Salem</a> as part of a six-member international team from six different countries. I co-developed <em>MISFIT</em>, a two-stage wavelet-domain framework for MRI modality synthesis, and contributed to an end-to-end neuro-oncology pipeline spanning synthesis of missing MRIs, segmentation of brain tumors in low-resource Sub-Saharan Africa data, and classification of tumor responses. Our team received the Best Team Award within UGRIP, and the works were published in the MICCAI 2025 BraTS Challenge proceedings.
+  </p>
+  <p>
+    Earlier at NTU, under <a href="https://www.ntu.edu.sg/scse/about-us/our-people/faculty/christopher-ho-tin-lee">Dr. Christopher Ho Tin Lee</a>, I worked on <strong>motor drive control</strong>, designing a neural network compensator within an ADRC loop to suppress torque ripple in PMSMs. This project, which demonstrated the potential of data-driven control for real engineering systems, was presented at ICUR 2024.
+  </p>
+  <p>
+    Across these domains, my goal remains constant: to design AI systems that do not treat reliability and creativity as trade-offs, but instead make them reinforce each other. I am always excited to explore new collaborations and discussions in this space.
+  </p>
+</section>
 
-      <section>
-        <h2>News & Timeline</h2>
-        <!-- The news/timeline list structure is different, it does not need thumbnails -->
-        <ul class="list">
-            <li><div class="date">May 2025</div> <div class="description">Spent the summer at <strong>Microsoft Research</strong>, working on Post Training Quantization with <a href="https://scholar.google.com/citations?user=l8dX3ssAAAAJ&hl=en">James Hensman</a>.</div></li>
-            <li><div class="date">June 2024</div> <div class="description">I will be doing a research internship with <strong>Bosch AI</strong>, developing Sparse Mixture of Expert models for efficient inference.</div></li>
-            <li><div class="date">April 2022</div> <div class="description">Started my PhD with Dr. Rebekka Burkholz at <strong>CISPA</strong>.</div></li>
-            <li><div class="date">Dec 2020</div> <div class="description">Graduated with an MS in ECE from <strong>Carnegie Mellon University</strong>.</div></li>
-            <li><div class="date">Aug 2020</div> <div class="description">Interned with the Video Systems team at <strong>Qualcomm</strong> on video denoising algorithms.</div></li>
-            <li><div class="date">May 2020</div> <div class="description">Joined the <strong>OPAL Group</strong> at CMU as a Graduate Research Assistant.</div></li>
-            <li><div class="date">Aug 2019</div> <div class="description">Started as a Master's student at <strong>CMU</strong>.</div></li>
-            <li><div class="date">May 2019</div> <div class="description">Graduated from <strong>BITS Pilani, Goa Campus</strong>.</div></li>
-        </ul>
-      </section>
       
       <section>
         <h2>Publications</h2>
