--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Mohor Banerjee</title>
   
-  <!-- This is the Google Site verification tag you wanted to keep -->
-  <meta name="google-site-verification" content="nE15D4IQuhpbq911DjoG8NvWvkLi6euDJixacyOZVtE" />
-  
   <meta name="author" content="Mohor Banerjee">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="images/seal_icon.png">
+  <link rel="icon" type="image/png" href="images/doraemon_icon.png">
 
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
