--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         </div>
       </div>
       <div class="header-photo">
-        <a href="images/mohorb.jpg"><img alt="profile photo" src="images/mohorb.jpg"></a>
+        <a href="images/mohorban.jpg"><img alt="profile photo" src="images/mohorban.jpg"></a>
       </div>
     </header>
 
