--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <div class="header-text">
         <p class="name">Mohor Banerjee</p>
         <div class="links">
-          <a href="mailto:MOHOR001@e.ntu.edu.sg">
+          <a href="mailto:mohorb04@gmail.com">
             <svg viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2zm0 2v.51l8 5 8-5V6H4zm0 10h16v-9.3l-8 5-8-5V16z"/></svg>
             Email
           </a>
