--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <svg viewBox="0 0 24 24"><path d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V8l-6-6zm-2 16h-2v-2h2v2zm-2-4h-2v-2h2v2zm0-4H8V8h2v2zm4 4h-2v-2h2v2zm0-4h-2v-2h2v2zm2 4h-2v-2h2v2zm-1-7V3.5L18.5 9H13z"/></svg>
             CV
           </a>
-          <a href="www.linkedin.com/in/mohor-banerjee-5289a3244" target="_blank">
+          <a href="https://www.linkedin.com/in/mohor-banerjee-5289a3244/" target="_blank">
             <svg viewBox="0 0 24 24"><path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14zm-11 6v7h2.5v-3.5a1.5 1.5 0 0 1 3 0V16h2.5v-4a4 4 0 0 0-8 0zM8.5 8.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/></svg>
             LinkedIn
           </a>
