--- a/index.html
+++ b/index.html
@@ -277,18 +277,25 @@
 <section>
   <h2>About Me</h2>
   <p>
-    I am a final-year Computer Science undergraduate at <a href="https://www.ntu.edu.sg/">Nanyang Technological University (NTU), Singapore</a>, thankful to be supervised by <a href="https://aseschng.github.io/intro1.html">Dr. Chng Eng Siong</a> and <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> on my <strong>FYP on avian acoustic monitoring</strong>, and grateful to be working with <a href="https://dr.ntu.edu.sg/entities/person/Alvin-Chan-Guo-Wei">Dr. Alvin Guo Wei Chan</a> on <strong>language model hallucinations and creativity</strong>.
+    I am a final-year Computer Science undergraduate at <a href="https://www.ntu.edu.sg/">Nanyang Technological University (NTU), Singapore</a>, thankful to be supervised by <a href="https://aseschng.github.io/intro1.html">Dr. Chng Eng Siong</a> and <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> on my <strong>avian acoustic monitoring FYP</strong>, and to be working with <a href="https://dr.ntu.edu.sg/entities/person/Alvin-Chan-Guo-Wei">Dr. Alvin Guo Wei Chan</a> on <strong>language model hallucinations and creativity</strong>.
   </p>
   <p>
-    Earlier, I was thankful to join NTU’s <strong>URECA Program</strong>—first in my sophomore year with <a href="https://www.ntu.edu.sg/erian/about-us/our-people/cluster-directors/christopher-lee">Dr. Christopher Ho Tin Lee</a> and <a href="https://personal.ntu.edu.sg/chtlee/details-page/details-page-zhao-chenhao.html">Zhao Chenhao</a> on motor drive control, which I presented at the <strong>International Conference of Undergraduate Research (ICUR) 2024</strong>, and later in my junior year with Dr. Chan on truth–creativity tradeoffs in large language models.
+    In my junior year, I joined NTU’s <strong>URECA Program</strong> under Dr. Chan, studying how hallucination-mitigation strategies (DoLa, CoVe, RAG) influence the balance between factuality and originality in LLMs.
   </p>
   <p>
-    During my internship at <a href="https://research.sg.panasonic.com/">Panasonic R&D Singapore</a>, I was fortunate to be mentored by <a href="https://research.sg.panasonic.com/people/nagisetty-srikanth/">Srikanth Nagisetty</a>, where my <strong>ReCoOP</strong> framework improved SELD performance by 17.8% and earned <strong>3rd place globally</strong> in the IEEE AASP DCASE 2025 Challenge. Later, I was grateful to be selected for the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, where I collaborated with <a href="https://mbzuai.ac.ae/study/faculty/mohammad-yaqub/">Dr. Mohammad Yaqub</a>, <a href="https://huwang01.github.io/">Dr. Hu Wang</a>, and <a href="https://mbzuai-biomedia.com/biomedia/mostafa-salem">Dr. Mostafa Salem</a> on <strong>MISFIT</strong>, a wavelet-domain MRI synthesis framework that won the Best Team Award and was published in the <strong>MICCAI 2025 BraTS Challenge proceedings</strong>.
+    Around the same time, during my internship at <a href="https://research.sg.panasonic.com/">Panasonic R&D Singapore</a> with <a href="https://research.sg.panasonic.com/people/nagisetty-srikanth/">Srikanth Nagisetty</a>, I developed <strong>ReCoOP</strong>, a stereo SELD framework that improved baseline performance by 17.8% and ranked 3rd globally in the IEEE AASP DCASE 2025 Challenge.
   </p>
   <p>
-    Across these experiences, I have stayed guided by the belief that <strong>reliability and creativity in AI should strengthen one another</strong>.
+    I was also selected for the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, collaborating with <a href="https://mbzuai.ac.ae/study/faculty/mohammad-yaqub/">Dr. Mohammad Yaqub</a>, <a href="https://huwang01.github.io/">Dr. Hu Wang</a>, and <a href="https://mbzuai-biomedia.com/biomedia/mostafa-salem">Dr. Mostafa Salem</a> on <strong>MISFIT</strong>, a wavelet-based MRI modality synthesis framework and an <strong>end-to-end neuro-oncology pipeline</strong>, published in the <strong>MICCAI 2025 BraTS Challenge proceedings</strong>.
+  </p>
+  <p>
+    Earlier in my sophomore year, under <a href="https://www.ntu.edu.sg/erian/about-us/our-people/cluster-directors/christopher-lee">Dr. Christopher Ho Tin Lee</a> and <a href="https://personal.ntu.edu.sg/chtlee/details-page/details-page-zhao-chenhao.html">Zhao Chenhao</a>, I worked on motor drive control, presenting our ADRC–neural network compensator for PMSMs at the <strong>International Conference of Undergraduate Research (ICUR) 2024</strong>.
+  </p>
+  <p>
+    Across these experiences, I have been guided by a consistent idea: that <strong>reliability and creativity in AI should reinforce one another</strong>.
   </p>
 </section>
+
 
 
 
