--- a/index.html
+++ b/index.html
@@ -279,23 +279,23 @@
   <p>
     I am a final-year Computer Science undergraduate at 
     <a href="https://www.ntu.edu.sg/">Nanyang Technological University (NTU), Singapore</a>, 
-    supervised by <a href="https://aseschng.github.io/intro1.html">Dr. Chng Eng Siong</a> and 
-    <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> on my avian acoustic monitoring FYP, 
+    grateful to be supervised by <a href="https://aseschng.github.io/intro1.html">Dr. Chng Eng Siong</a> and 
+    <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> on my FYP on avian acoustic monitoring, 
     and working with <a href="https://dr.ntu.edu.sg/entities/person/Alvin-Chan-Guo-Wei">Dr. Alvin Guo Wei Chan</a> 
     on language model hallucinations and creativity.
   </p>
   <p>
-    In my junior year, I joined NTU’s URECA Program under Dr. Chan, where I studied how hallucination-mitigation strategies 
-    (DoLa, CoVe, RAG) affect the balance between factuality and originality in large language models.
+    Through NTU’s URECA Program under Dr. Chan, I explored how hallucination-mitigation strategies (DoLa, CoVe, RAG) 
+    shape the balance between factuality and originality in large language models.
   </p>
   <p>
-    During my internship at <a href="https://research.sg.panasonic.com/">Panasonic R&D Singapore</a> with 
+    During my internship at <a href="https://research.sg.panasonic.com/">Panasonic R&D Singapore</a> under 
     <a href="https://research.sg.panasonic.com/people/nagisetty-srikanth/">Srikanth Nagisetty</a>, 
     I built ReCoOP, a stereo SELD framework that improved the baseline by 17.8% and ranked 3rd globally 
     in the IEEE AASP DCASE 2025 Challenge.
   </p>
   <p>
-    I was selected for the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, collaborating with 
+    I was later selected for the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, working with 
     <a href="https://mbzuai.ac.ae/study/faculty/mohammad-yaqub/">Dr. Mohammad Yaqub</a>, 
     <a href="https://huwang01.github.io/">Dr. Hu Wang</a>, and 
     <a href="https://mbzuai-biomedia.com/biomedia/mostafa-salem">Dr. Mostafa Salem</a> on MISFIT, 
@@ -303,17 +303,18 @@
     published in the MICCAI 2025 BraTS Challenge proceedings.
   </p>
   <p>
-    In my sophomore year, under 
+    Earlier in my sophomore year, I worked with 
     <a href="https://www.ntu.edu.sg/erian/about-us/our-people/cluster-directors/christopher-lee">Dr. Christopher Ho Tin Lee</a> 
-    and <a href="https://personal.ntu.edu.sg/chtlee/details-page/details-page-zhao-chenhao.html">Zhao Chenhao</a>, 
-    I worked on motor drive control and presented our ADRC–neural network compensator for PMSMs at the 
+    and <a href="https://personal.ntu.edu.sg/chtlee/details-page/details-page-zhao-chenhao.html">Zhao Chenhao</a> 
+    on motor drive control, presenting our ADRC–neural network compensator for PMSMs at the 
     International Conference of Undergraduate Research (ICUR) 2024.
   </p>
   <p>
-    Across these experiences, I have been guided by the idea that reliability and creativity in AI should reinforce each other, 
-    and I look forward to building new directions in these domains.
+    These experiences have shaped my view that reliability and creativity in AI should go hand in hand, 
+    and I am excited to keep exploring new paths in these areas.
   </p>
 </section>
+
 
 
 
