--- a/index.html
+++ b/index.html
@@ -285,17 +285,17 @@
     on language model hallucinations and creativity.
   </p>
   <p>
-    Through NTU’s URECA Program under Dr. Chan, I explored how hallucination-mitigation strategies (DoLa, CoVe, RAG) 
+    Through NTU’s URECA Program under Dr. Chan, I studied how hallucination-mitigation strategies (DoLa, CoVe, RAG) 
     shape the balance between factuality and originality in large language models.
   </p>
   <p>
-    During my internship at <a href="https://research.sg.panasonic.com/">Panasonic R&D Singapore</a> under 
+    At <a href="https://research.sg.panasonic.com/">Panasonic R&D Singapore</a> under 
     <a href="https://research.sg.panasonic.com/people/nagisetty-srikanth/">Srikanth Nagisetty</a>, 
     I built ReCoOP, a stereo SELD framework that improved the baseline by 17.8% and ranked 3rd globally 
     in the IEEE AASP DCASE 2025 Challenge.
   </p>
   <p>
-    I was later selected for the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, working with 
+    In the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, I worked with 
     <a href="https://mbzuai.ac.ae/study/faculty/mohammad-yaqub/">Dr. Mohammad Yaqub</a>, 
     <a href="https://huwang01.github.io/">Dr. Hu Wang</a>, and 
     <a href="https://mbzuai-biomedia.com/biomedia/mostafa-salem">Dr. Mostafa Salem</a> on MISFIT, 
@@ -303,10 +303,9 @@
     published in the MICCAI 2025 BraTS Challenge proceedings.
   </p>
   <p>
-    Earlier in my sophomore year, I worked with 
-    <a href="https://www.ntu.edu.sg/erian/about-us/our-people/cluster-directors/christopher-lee">Dr. Christopher Ho Tin Lee</a> 
-    and <a href="https://personal.ntu.edu.sg/chtlee/details-page/details-page-zhao-chenhao.html">Zhao Chenhao</a> 
-    on motor drive control, presenting our ADRC–neural network compensator for PMSMs at the 
+    With <a href="https://www.ntu.edu.sg/erian/about-us/our-people/cluster-directors/christopher-lee">Dr. Christopher Ho Tin Lee</a> 
+    and <a href="https://personal.ntu.edu.sg/chtlee/details-page/details-page-zhao-chenhao.html">Zhao Chenhao</a>, 
+    I worked on motor drive control, presenting our ADRC-neural network compensator for PMSMs at the 
     International Conference of Undergraduate Research (ICUR) 2024.
   </p>
   <p>
@@ -314,6 +313,7 @@
     and I am excited to keep exploring new paths in these areas.
   </p>
 </section>
+
 
 
 
@@ -368,7 +368,7 @@
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">URECA@NTU 2024–25 (In press)</div>
+        <div class="date">URECA@NTU 2024-25 (In press)</div>
         <div class="description">
           <strong>Fact or fiction: Can truth kill creativity?</strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, A. G. W. Chan</div>
@@ -427,10 +427,10 @@
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">Jan 2025 – May 2025</div>
+        <div class="date">Jan 2025 - May 2025</div>
         <div class="description">
           <strong>AI Engineer Intern — Panasonic R&D Center</strong>
-          <div>• Built the ReCoOP framework (ResNet–Conformer + ONE-PEACE + ILD/IPD/GCC-PHAT), ranking 3rd globally in DCASE 2025 Task 3 (F@20 = 43.9%, DOA = 14.0°, RDE = 35.2%).</div>
+          <div>• Built the ReCoOP framework (ResNet-Conformer + ONE-PEACE + ILD/IPD/GCC-PHAT), ranking 3rd globally in DCASE 2025 Task 3 (F@20 = 43.9%, DOA = 14.0°, RDE = 35.2%).</div>
           <div>• Developed dysarthric-speech detection (Wav2Vec2 + CNN-Attention), >90% accuracy; deployed Streamlit app with VAD and real-time visualization.</div>
         </div>
       </div>
@@ -438,7 +438,7 @@
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">May 2024 – Jul 2024</div>
+        <div class="date">May 2024 - Jul 2024</div>
         <div class="description">
           <strong>Data Engineering Intern — Seatrium</strong>
           <div>Full-stack data platform (React, Node.js, PostgreSQL) for 15 yards; co-designed ETL standardization for global operations.</div>
@@ -448,7 +448,7 @@
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">Mar 2024 – Apr 2024</div>
+        <div class="date">Mar 2024 - Apr 2024</div>
         <div class="description">
           <strong>Project (NTU VeNTUre) — Bosch</strong>
           <div>Hybrid recommender with NLP for personalized recipe suggestions; PCA + K-Means clustering for content filtering.</div>
@@ -474,7 +474,7 @@
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">Aug 2024 – Oct 2024</div>
+        <div class="date">Aug 2024 - Oct 2024</div>
         <div class="description">
           <strong>SOPPU — Scalable One PEFT per User (Alibaba Global Challenge)</strong>
           <div>Per-user LoRA adapters with RAG (Qwen2, ChromaDB, LangChain); scaled to 500+ adapters via SVD/joint compression; domain-agnostic personalization at ~2× compression.</div>
@@ -494,7 +494,7 @@
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">Jan 2024 – Apr 2024</div>
+        <div class="date">Jan 2024 - Apr 2024</div>
         <div class="description">
           <strong>CROSS BORDER — Full-Stack Web Application</strong>
           <div>Services for migrant workers in SG: React/Node/MongoDB/AWS S3; Google Places, currency/news/Gemini APIs; IEEE-style SRS and AI chatbot.</div>
@@ -504,7 +504,7 @@
     <li>
       <div class="publication-thumbnail"></div>
       <div class="publication-text">
-        <div class="date">Sep 2023 – Nov 2023</div>
+        <div class="date">Sep 2023 - Nov 2023</div>
         <div class="description">
           <strong>Camp Management System — OOP (Java)</strong>
           <div>Role-based system for 500+ users; secure login/session management; modular design (encapsulation, inheritance, etc.).</div>
