--- a/index.html
+++ b/index.html
@@ -279,36 +279,37 @@
   <p>
     I am a final-year Computer Science undergraduate at 
     <a href="https://www.ntu.edu.sg/">Nanyang Technological University (NTU), Singapore</a>, 
-    grateful to be supervised by <a href="https://aseschng.github.io/intro1.html">Dr. Chng Eng Siong</a> and 
-    <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> on my FYP on avian acoustic monitoring. 
-    I am also currently working with <a href="https://dr.ntu.edu.sg/entities/person/Alvin-Chan-Guo-Wei">Dr. Alvin Guo Wei Chan</a> 
+    thankful to be supervised by <a href="https://aseschng.github.io/intro1.html">Dr. Chng Eng Siong</a> and 
+    <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> on my FYP in avian acoustic monitoring. 
+    I am also working with <a href="https://dr.ntu.edu.sg/entities/person/Alvin-Chan-Guo-Wei">Dr. Alvin Guo Wei Chan</a> 
     on large language model hallucinations and creativity.
   </p>
   <p>
-    At <a href="https://research.sg.panasonic.com/">Panasonic R&D Singapore</a> under 
+    At <a href="https://research.sg.panasonic.com/">Panasonic R&D Singapore</a>, under the mentorship of 
     <a href="https://research.sg.panasonic.com/people/nagisetty-srikanth/">Srikanth Nagisetty</a>, 
-    I built ReCoOP, a stereo SELD framework that improved the baseline by 17.8% and ranked 3rd globally 
-    in the IEEE AASP DCASE 2025 Challenge.
+    I developed <strong>ReCoOP</strong>, a stereo SELD framework that placed 
+    <strong>3rd globally in the IEEE AASP DCASE 2025 Challenge</strong>.
   </p>
   <p>
-    In the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, I worked with 
+    In the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, I collaborated with 
     <a href="https://mbzuai.ac.ae/study/faculty/mohammad-yaqub/">Dr. Mohammad Yaqub</a>, 
     <a href="https://huwang01.github.io/">Dr. Hu Wang</a>, and 
-    <a href="https://mbzuai-biomedia.com/biomedia/mostafa-salem">Dr. Mostafa Salem</a> on MISFIT, 
-    a wavelet-based MRI modality synthesis framework and an end-to-end neuro-oncology pipeline, 
-    published in the MICCAI 2025 BraTS Challenge proceedings.
+    <a href="https://mbzuai-biomedia.com/biomedia/mostafa-salem">Dr. Mostafa Salem</a> on <strong>MISFIT</strong>, 
+    a wavelet-based MRI modality synthesis framework integrated into an end-to-end neuro-oncology pipeline, 
+    published in the <strong>MICCAI 2025 BraTS Challenge</strong>.
   </p>
   <p>
-    With <a href="https://www.ntu.edu.sg/erian/about-us/our-people/cluster-directors/christopher-lee">Dr. Christopher Ho Tin Lee</a> 
+    Earlier, with <a href="https://www.ntu.edu.sg/erian/about-us/our-people/cluster-directors/christopher-lee">Dr. Christopher Ho Tin Lee</a> 
     and <a href="https://personal.ntu.edu.sg/chtlee/details-page/details-page-zhao-chenhao.html">Zhao Chenhao</a>, 
-    I worked on motor drive control, presenting our ADRC-neural network compensator for PMSMs at the 
-    International Conference of Undergraduate Research (ICUR) 2024.
+    I worked on motor drive control, presenting our ADRC–neural network compensator for PMSMs at the 
+    <strong>International Conference of Undergraduate Research (ICUR) 2024</strong>.
   </p>
   <p>
-    These experiences have shaped my view that reliability and creativity in AI should go hand in hand, 
-    and I am excited to keep exploring new paths in these areas.
+    These experiences have shaped my view that <strong>reliability and creativity in AI should go hand in hand</strong>, 
+    and I look forward to exploring new paths at this intersection.
   </p>
 </section>
+
 
 
 
