--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
     I am a final-year Computer Science undergraduate at 
     <a href="https://www.ntu.edu.sg/">Nanyang Technological University (NTU), Singapore</a>, 
     thankful to be supervised by <a href="https://aseschng.github.io/intro1.html">Dr. Chng Eng Siong</a> and 
-    <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> on my FYP in avian acoustic monitoring. 
-    I am also working with <a href="https://dr.ntu.edu.sg/entities/person/Alvin-Chan-Guo-Wei">Dr. Alvin Guo Wei Chan</a> 
+    <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> on my FYP in avian acoustic monitoring, 
+    and working with <a href="https://dr.ntu.edu.sg/entities/person/Alvin-Chan-Guo-Wei">Dr. Alvin Guo Wei Chan</a> 
     on large language model hallucinations and creativity.
   </p>
   <p>
@@ -289,13 +289,11 @@
     <a href="https://research.sg.panasonic.com/people/nagisetty-srikanth/">Srikanth Nagisetty</a>, 
     I developed <strong>ReCoOP</strong>, a stereo SELD framework that placed 
     <strong>3rd globally in the IEEE AASP DCASE 2025 Challenge</strong>.
-  </p>
-  <p>
-    In the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, I collaborated with 
+    In the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, I worked with 
     <a href="https://mbzuai.ac.ae/study/faculty/mohammad-yaqub/">Dr. Mohammad Yaqub</a>, 
     <a href="https://huwang01.github.io/">Dr. Hu Wang</a>, and 
     <a href="https://mbzuai-biomedia.com/biomedia/mostafa-salem">Dr. Mostafa Salem</a> on <strong>MISFIT</strong>, 
-    a wavelet-based MRI modality synthesis framework integrated into an end-to-end neuro-oncology pipeline, 
+    a wavelet-based MRI modality synthesis framework and an end-to-end neuro-oncology pipeline, 
     published in the <strong>MICCAI 2025 BraTS Challenge</strong>.
   </p>
   <p>
@@ -309,6 +307,7 @@
     and I look forward to exploring new paths at this intersection.
   </p>
 </section>
+
 
 
 
