--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
     I am a final-year Computer Science undergraduate at 
     <a href="https://www.ntu.edu.sg/">Nanyang Technological University (NTU), Singapore</a>, 
     thankful to be supervised by <a href="https://aseschng.github.io/intro1.html">Dr. Chng Eng Siong</a> and 
-    <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> on my FYP in avian acoustic monitoring, 
-    and working with <a href="https://dr.ntu.edu.sg/entities/person/Alvin-Chan-Guo-Wei">Dr. Alvin Guo Wei Chan</a> 
+    <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> on my FYP in avian acoustic monitoring. 
+    I am also currently working with <a href="https://dr.ntu.edu.sg/entities/person/Alvin-Chan-Guo-Wei">Dr. Alvin Guo Wei Chan</a> 
     on large language model hallucinations and creativity.
   </p>
   <p>
@@ -299,7 +299,7 @@
   <p>
     Earlier, with <a href="https://www.ntu.edu.sg/erian/about-us/our-people/cluster-directors/christopher-lee">Dr. Christopher Ho Tin Lee</a> 
     and <a href="https://personal.ntu.edu.sg/chtlee/details-page/details-page-zhao-chenhao.html">Zhao Chenhao</a>, 
-    I worked on motor drive control, presenting our ADRC–neural network compensator for PMSMs at the 
+    I worked on motor drive control, presenting our ADRC-neural network compensator for PMSMs at the 
     <strong>International Conference of Undergraduate Research (ICUR) 2024</strong>.
   </p>
   <p>
