--- a/index.html
+++ b/index.html
@@ -287,14 +287,14 @@
   <p>
     At <a href="https://research.sg.panasonic.com/">Panasonic R&D Singapore</a>, under the mentorship of 
     <a href="https://research.sg.panasonic.com/people/nagisetty-srikanth/">Srikanth Nagisetty</a>, 
-    I developed <strong>ReCoOP</strong>, a stereo SELD framework that placed 
-    <strong>3rd globally in the IEEE AASP DCASE 2025 Challenge</strong>.
+    I developed ReCoOP, a stereo SELD framework that placed 
+    3rd globally in the IEEE AASP DCASE 2025 Challenge.
     In the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, I worked with 
     <a href="https://mbzuai.ac.ae/study/faculty/mohammad-yaqub/">Dr. Mohammad Yaqub</a>, 
     <a href="https://huwang01.github.io/">Dr. Hu Wang</a>, and 
-    <a href="https://mbzuai-biomedia.com/biomedia/mostafa-salem">Dr. Mostafa Salem</a> on <strong>MISFIT</strong>, 
+    <a href="https://mbzuai-biomedia.com/biomedia/mostafa-salem">Dr. Mostafa Salem</a> on MISFIT, 
     a wavelet-based MRI modality synthesis framework and an end-to-end neuro-oncology pipeline, 
-    published in the <strong>MICCAI 2025 BraTS Challenge</strong>.
+    published in the MICCAI 2025 BraTS Challenge.
   </p>
   <p>
     Earlier, with <a href="https://www.ntu.edu.sg/erian/about-us/our-people/cluster-directors/christopher-lee">Dr. Christopher Ho Tin Lee</a> 
