--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
     Earlier, with <a href="https://www.ntu.edu.sg/erian/about-us/our-people/cluster-directors/christopher-lee">Dr. Christopher Ho Tin Lee</a> 
     and <a href="https://personal.ntu.edu.sg/chtlee/details-page/details-page-zhao-chenhao.html">Zhao Chenhao</a>, 
     I worked on motor drive control, presenting our ADRC-neural network compensator for PMSMs at the 
-    <strong>International Conference of Undergraduate Research (ICUR) 2024</strong>.
+    International Conference of Undergraduate Research (ICUR) 2024.
   </p>
   <p>
-    These experiences have shaped my view that <strong>reliability and creativity in AI should go hand in hand</strong>, 
+    These experiences have shaped my view that reliability and creativity in AI should go hand in hand, 
     and I look forward to exploring new paths at this intersection.
   </p>
 </section>
