--- a/index.html
+++ b/index.html
@@ -288,19 +288,19 @@
     At <a href="https://research.sg.panasonic.com/">Panasonic R&D Singapore</a>, under the mentorship of 
     <a href="https://research.sg.panasonic.com/people/nagisetty-srikanth/">Srikanth Nagisetty</a>, 
     I developed ReCoOP, a stereo SELD framework that placed 
-    3rd globally in the IEEE AASP DCASE 2025 Challenge.
+    3rd globally in the <a href="https://dcase.community/challenge2025/task-stereo-sound-event-localization-and-detection-in-regular-video-content">IEEE AASP DCASE 2025 Challenge</a>.
     In the <a href="https://mbzuai.ac.ae/ugrip/">MBZUAI UGRIP 2025 program</a>, I worked with 
     <a href="https://mbzuai.ac.ae/study/faculty/mohammad-yaqub/">Dr. Mohammad Yaqub</a>, 
     <a href="https://huwang01.github.io/">Dr. Hu Wang</a>, and 
     <a href="https://mbzuai-biomedia.com/biomedia/mostafa-salem">Dr. Mostafa Salem</a> on MISFIT, 
     a wavelet-based MRI modality synthesis framework and an end-to-end neuro-oncology pipeline, 
-    published in the MICCAI 2025 BraTS Challenge.
+    published in the <a href="https://www.synapse.org/Synapse:syn64153130/wiki/630130">MICCAI 2025 BraTS Challenge</a>.
   </p>
   <p>
     Earlier, with <a href="https://www.ntu.edu.sg/erian/about-us/our-people/cluster-directors/christopher-lee">Dr. Christopher Ho Tin Lee</a> 
     and <a href="https://personal.ntu.edu.sg/chtlee/details-page/details-page-zhao-chenhao.html">Zhao Chenhao</a>, 
     I worked on motor drive control, presenting our ADRC-neural network compensator for PMSMs at the 
-    International Conference of Undergraduate Research (ICUR) 2024.
+    <a href="https://www.icurportal.com/past-events/icur-2024/">International Conference of Undergraduate Research (ICUR) 2024</a>.
   </p>
   <p>
     These experiences have shaped my view that reliability and creativity in AI should go hand in hand, 
