--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
     thankful to be supervised by <a href="https://aseschng.github.io/intro1.html">Dr. Chng Eng Siong</a> and 
     <a href="https://www.researchgate.net/profile/Wei-Rao-2">Dr. Rao Wei</a> on my FYP in avian acoustic monitoring. 
     I am also currently working with <a href="https://dr.ntu.edu.sg/entities/person/Alvin-Chan-Guo-Wei">Dr. Alvin Guo Wei Chan</a> 
-    on large language model hallucinations and creativity.
+    as Research Assistant on large language model hallucinations and creativity.
   </p>
   <p>
     At <a href="https://research.sg.panasonic.com/">Panasonic R&D Singapore</a>, under the mentorship of 
