--- a/index.html
+++ b/index.html
@@ -397,7 +397,8 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">DCASE 2025 (In press)</div>
         <div class="description">
-          <strong>Exploiting stereo spatial properties with ReCoOP framework for joint SELD</strong>
+          <strong>Exploiting stereo spatial properties with ReCoOP framework for joint sound event
+detection and localization.</strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, S. Nagisetty, H. B. Teo</div>
           <div>10th Workshop on Detection and Classification of Acoustic Scenes and Events (DCASE 2025).</div>
         </div>
@@ -408,7 +409,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">MICCAI BraTS 2025 (In press)</div>
         <div class="description">
-          <strong><a href="https://doi.org/10.13140/RG.2.2.26641.29286">MISFIT: Modality inference via style fusion and invertible translation</a></strong>
+          <strong><a href="https://doi.org/10.13140/RG.2.2.26641.29286">MISFIT: Modality inference via style fusion and invertible translation for cross-modality synthesis of 3D MRI volumes.</a></strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, Q. Ji, S. Hashmi, A. Elsayed, D. Tikhonov, M. F. Scatolin, A. Jaheen, D. Kim, H. Wang, M. Salem, S. Kim, M. Yaqub</div>
         </div>
       </div>
@@ -418,7 +419,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">MICCAI BraTS 2025 (In press)</div>
         <div class="description">
-          <strong><a href="https://arxiv.org/abs/2507.23256">EMedNeXt: Enhanced brain tumor segmentation for Sub-Saharan Africa</a></strong>
+          <strong><a href="https://arxiv.org/abs/2507.23256">EMedNeXt: An enhanced brain tumor segmentation framework for Sub-Saharan Africa using MedNeXt V2 with deep supervision.</a></strong>
           <div class="authors">A. Jaheen, A. Elsayed, D. Kim, D. Tikhonov, M. F. Scatolin, <strong>Mohor Banerjee</strong>, Q. Ji, M. Salem, H. Wang, S. Hashmi, M. Yaqub</div>
         </div>
       </div>
@@ -428,7 +429,7 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">arXiv 2025 (Preprint)</div>
         <div class="description">
-          <strong><a href="https://arxiv.org/abs/2509.06511">Predicting brain tumor response using hybrid deep learning and radiomics</a></strong>
+          <strong><a href="https://arxiv.org/abs/2509.06511">Predicting brain tumor response to therapy using a hybrid deep learning and radiomics approach</a></strong>
           <div class="authors">D. Tikhonov, M. F. Scatolin, <strong>Mohor Banerjee</strong>, Q. Ji, A. Jaheen, D. Kim, M. Salem, A. Elsayed, H. Wang, S. Hashmi</div>
         </div>
       </div>
