--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ detection and localization.</strong>
       <div class="publication-text">
         <div class="date">URECA@NTU 2024-25 (In press)</div>
         <div class="description">
-          <strong>Fact or fiction: Can truth kill creativity?</strong>
+          <strong><a href="https://doi.org/10.13140/RG.2.2.32833.62568">Fact or fiction: Can truth kill creativity?</strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, A. G. W. Chan</div>
           <div>Proceedings available via NTU internal repository.</div>
         </div>
