--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ section { scroll-margin-top: 80px; }
         <div class="description">
           <strong>Exploiting stereo spatial properties with ReCoOP framework for joint sound event detection and localization.</strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, S. Nagisetty, H. B. Teo</div>
-          <div>Principal model developer & project leader. Peer-reviewed. DCASE 2025 Workshop.</div>
+          <div>DCASE 2025 Workshop.</div>
         </div>
       </div>
     </li>
@@ -408,7 +408,7 @@ section { scroll-margin-top: 80px; }
         <div class="description">
           <strong><a href="https://doi.org/10.13140/RG.2.2.26641.29286">MISFIT: Modality inference via style fusion and invertible translation for cross-modality synthesis of 3D MRI volumes.</a></strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, Q. Ji, S. Hashmi, et al.</div>
-          <div>Principal model developer & project leader. Springer proceedings.</div>
+          <div>Springer proceedings.</div>
         </div>
       </div>
     </li>
@@ -418,7 +418,7 @@ section { scroll-margin-top: 80px; }
         <div class="description">
           <strong><a href="https://arxiv.org/abs/2507.23256">EMedNeXt: Enhanced brain tumor segmentation for Sub-Saharan Africa using MedNeXt V2.</a></strong>
           <div class="authors">A. Jaheen, A. Elsayed, <strong>Mohor Banerjee</strong>, et al.</div>
-          <div>Collaborator. Springer proceedings.</div>
+          <div>Springer proceedings.</div>
         </div>
       </div>
     </li>
@@ -428,7 +428,7 @@ section { scroll-margin-top: 80px; }
         <div class="description">
           <strong><a href="https://arxiv.org/abs/2509.06511">Predicting brain tumor response to therapy using a hybrid deep learning and radiomics approach.</a></strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, D. Tikhonov, M. F. Scatolin, et al.</div>
-          <div>Collaborator. Preprint on arXiv.</div>
+          <div>Preprint on arXiv.</div>
         </div>
       </div>
     </li>
@@ -438,7 +438,7 @@ section { scroll-margin-top: 80px; }
         <div class="description">
           <strong><a href="https://doi.org/10.13140/RG.2.2.32833.62568">Fact or fiction: Can truth kill creativity?</a></strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, A. G. W. Chan</div>
-          <div>Project leader. NTU internal repository.</div>
+          <div>NTU internal repository.</div>
         </div>
       </div>
     </li>
@@ -448,7 +448,7 @@ section { scroll-margin-top: 80px; }
         <div class="description">
           <strong><a href="https://openreview.net/forum?id=hocpzqMqB5">Automating evaluation of creativity in LLMs with semantic entropy and multi-agent judge.</a></strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, M. S. Tan, Z. Choy, et al.</div>
-          <div>Collaborator. Peer-reviewed workshop paper.</div>
+          <div>Peer-reviewed workshop paper.</div>
         </div>
       </div>
     </li>
@@ -458,7 +458,7 @@ section { scroll-margin-top: 80px; }
         <div class="description">
           <strong><a href="https://www.adai.ai/dai/2024/daipapers/DAI2024paper21.pdf">SOPPU: Scalable One PEFT per User</a></strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, Y. Jain</div>
-          <div>Project leader. Accepted student poster.</div>
+          <div>Accepted student poster.</div>
         </div>
       </div>
     </li>
@@ -468,7 +468,7 @@ section { scroll-margin-top: 80px; }
         <div class="description">
           <strong>Enhancing Urban Mobility through Adaptive Traffic Analysis: A Case Study in Singapore</strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, A. C. Somasundaram, R. Pahwa, et al.</div>
-          <div>Project leader. Preprint publication.</div>
+          <div>Preprint publication.</div>
         </div>
       </div>
     </li>
@@ -478,7 +478,7 @@ section { scroll-margin-top: 80px; }
         <div class="description">
           <strong><a href="https://doi.org/10.13140/RG.2.2.25113.48480">Advanced control strategy for motor drives using neural network algorithm.</a></strong>
           <div class="authors"><strong>Mohor Banerjee</strong>, C. Zhao, C. H. T. Lee</div>
-          <div>Project leader. Orally presented at ICUR 2024.</div>
+          <div>Orally presented at ICUR 2024.</div>
         </div>
       </div>
     </li>
