--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">DCASE 2025 (In press)</div>
         <div class="description">
           <strong>Exploiting stereo spatial properties with ReCoOP framework for joint sound event detection and localization.</strong>
-          <div class="authors"><strong>Mohor Banerjee</strong>, S. Nagisetty, H. B. Teo</div>
+          <div class="authors"><strong>Banerjee M.</strong>, S. Nagisetty, H. B. Teo</div>
           <div>DCASE 2025 Workshop.</div>
         </div>
       </div>
@@ -406,8 +406,8 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">MICCAI BraTS 2025 (In press)</div>
         <div class="description">
-          <strong><a href="https://doi.org/10.13140/RG.2.2.26641.29286">MISFIT: Modality inference via style fusion and invertible translation for cross-modality synthesis of 3D MRI volumes.</a></strong>
-          <div class="authors"><strong>Mohor Banerjee</strong>, Q. Ji, S. Hashmi, et al.</div>
+          <strong><a href="https://doi.org/10.13140/RG.2.2.26641.29286">MISFIT: Modality Inference via Style Fusion and Invertible Translation for Cross-Modality Synthesis of 3D MRI Volumes</a></strong>
+          <div class="authors"><strong>Banerjee M.</strong>, Q. Ji, S. Hashmi, et al.</div>
           <div>Springer proceedings.</div>
         </div>
       </div>
@@ -416,8 +416,8 @@ section { scroll-margin-top: 80px; }
       <div class="publication-text">
         <div class="date">MICCAI BraTS 2025 (In press)</div>
         <div class="description">
-          <strong><a href="https://arxiv.org/abs/2507.23256">EMedNeXt: Enhanced brain tumor segmentation for Sub-Saharan Africa using MedNeXt V2.</a></strong>
-          <div class="authors">A. Jaheen, A. Elsayed, <strong>Mohor Banerjee</strong>, et al.</div>
+          <strong><a href="https://arxiv.org/abs/2507.23256">EMedNeXt: An Enhanced Brain Tumor Segmentation Framework for Sub-Saharan Africa using MedNeXt V2 with Deep Supervision.</a></strong>
+          <div class="authors">A. Jaheen, A. Elsayed, <strong>Banerjee M.</strong>, et al.</div>
           <div>Springer proceedings.</div>
         </div>
       </div>
@@ -427,7 +427,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">arXiv 2025 (Preprint)</div>
         <div class="description">
           <strong><a href="https://arxiv.org/abs/2509.06511">Predicting brain tumor response to therapy using a hybrid deep learning and radiomics approach.</a></strong>
-          <div class="authors"><strong>Mohor Banerjee</strong>, D. Tikhonov, M. F. Scatolin, et al.</div>
+          <div class="authors"><strong>Banerjee M.</strong>, D. Tikhonov, M. F. Scatolin, et al.</div>
           <div>Preprint on arXiv.</div>
         </div>
       </div>
@@ -437,7 +437,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">URECA@NTU 2024-25 (In press)</div>
         <div class="description">
           <strong><a href="https://doi.org/10.13140/RG.2.2.32833.62568">Fact or fiction: Can truth kill creativity?</a></strong>
-          <div class="authors"><strong>Mohor Banerjee</strong>, A. G. W. Chan</div>
+          <div class="authors"><strong>Banerjee M.</strong>, A. G. W. Chan</div>
           <div>NTU internal repository.</div>
         </div>
       </div>
@@ -447,8 +447,8 @@ section { scroll-margin-top: 80px; }
         <div class="date">ICLR 2025 Workshop</div>
         <div class="description">
           <strong><a href="https://openreview.net/forum?id=hocpzqMqB5">Automating evaluation of creativity in LLMs with semantic entropy and multi-agent judge.</a></strong>
-          <div class="authors"><strong>Mohor Banerjee</strong>, M. S. Tan, Z. Choy, et al.</div>
-          <div>Peer-reviewed workshop paper.</div>
+          <div class="authors"><strong>Banerjee M.</strong>, M. S. Tan, Z. Choy, et al.</div>
+          <div>Workshop paper.</div>
         </div>
       </div>
     </li>
@@ -457,7 +457,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">DAI 2024</div>
         <div class="description">
           <strong><a href="https://www.adai.ai/dai/2024/daipapers/DAI2024paper21.pdf">SOPPU: Scalable One PEFT per User</a></strong>
-          <div class="authors"><strong>Mohor Banerjee</strong>, Y. Jain</div>
+          <div class="authors"><strong>Banerjee M.</strong>, Y. Jain</div>
           <div>Accepted student poster.</div>
         </div>
       </div>
@@ -467,7 +467,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">Research Square 2024 (Preprint)</div>
         <div class="description">
           <strong>Enhancing Urban Mobility through Adaptive Traffic Analysis: A Case Study in Singapore</strong>
-          <div class="authors"><strong>Mohor Banerjee</strong>, A. C. Somasundaram, R. Pahwa, et al.</div>
+          <div class="authors"><strong>Banerjee M.</strong>, A. C. Somasundaram, R. Pahwa, et al.</div>
           <div>Preprint publication.</div>
         </div>
       </div>
@@ -477,7 +477,7 @@ section { scroll-margin-top: 80px; }
         <div class="date">ICUR 2024</div>
         <div class="description">
           <strong><a href="https://doi.org/10.13140/RG.2.2.25113.48480">Advanced control strategy for motor drives using neural network algorithm.</a></strong>
-          <div class="authors"><strong>Mohor Banerjee</strong>, C. Zhao, C. H. T. Lee</div>
+          <div class="authors"><strong>Banerjee M.</strong>, C. Zhao, C. H. T. Lee</div>
           <div>Orally presented at ICUR 2024.</div>
         </div>
       </div>
